# kindle-clippings-parser

./: .gitignore  Cargo.toml
parser/: Cargo.toml
parser-cli/: Cargo.toml
parser-cli/src/: main.rs
parser-wasm/: Cargo.toml
parser-wasm/js/: parse.ts
parser-wasm/scripts/: build
parser-wasm/src/: lib.rs
parser-wasm/src/snapshots/: clippings_parser_wasm__test__parse_multiple.snap  clippings_parser_wasm__test__parse_single_clipping.snap
parser/src/: lib.rs
parser/src/snapshots/: clippings_parser__test__parse_clippings.snap  clippings_parser__test__parse_single_article_clip.snap  clippings_parser__test__parse_single_bookmark.snap  clippings_parser__test__parse_single_clipping.snap  clippings_parser__test__parse_single_clipping_unix.snap  clippings_parser__test__parse_single_note.snap
src/: main.rs
src/snapshots/: clippings__test__parse_single_article_clip.snap  clippings__test__parse_single_bookmark.snap  clippings__test__parse_single_clipping.snap  clippings__test__parse_single_note.snap  clippings__test__single_clipping.snap
