[package]
name = "clippings-parser-wasm"
version = "0.1.1"
authors = ["Marcin Biernat <mb@marcinbiernat.pl>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clippings-parser = { path = "../parser" }
wasm-bindgen = "0.2.63"
serde_json = "1.0.55"

[dev-dependencies]
insta = "0.16.0"

# wasm-opt step fails for reasons unknown
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
