[package]
name = "clippings-parser"
version = "0.1.0"
authors = ["Marcin Biernat <mb@marcinbiernat.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
serde = "1.0.112"
[dev-dependencies]
insta = "0.16.0"
